# MSE-2023-image-otolaryngologist-17

./: README.md
DICOM slicers/CT-MRBrain/: Segmentation_Segment_1.stl
DICOM slicers/MRHead/: Segmentation_Segment_1.stl
Object_5301/: CMakeLists.txt
Object_5301/Obj_5301/: CMakeLists.txt  qSlicerObj_5301Module.cxx  qSlicerObj_5301Module.h  qSlicerObj_5301ModuleWidget.cxx  qSlicerObj_5301ModuleWidget.h
Object_5301/Obj_5301/Logic/: vtkSlicerObj_5301Logic.cxx  vtkSlicerObj_5301Logic.h
Object_5301/Obj_5301/Resources/: qSlicerObj_5301Module.qrc
Object_5301/Obj_5301/Resources/UI/: qSlicerObj_5301FooBarWidget.ui  qSlicerObj_5301ModuleWidget.ui
Object_5301/Obj_5301/Widgets/: qSlicerObj_5301FooBarWidget.cxx  qSlicerObj_5301FooBarWidget.h
ml/: README.md
ml/src/: get_image_from_dicom.py  main.py  proccessing_data.py
